Updated JBoss AS 7 (markdown)